Demo class method getFilteredWithExceeded example